# BioPilot

./: .gitignore  BioPilot_Roadmap.md  BioPilot_paper_draft.docx  LICENSE  README.md  environment.yml  nodeids  pyproject.toml
biopilot/: benchmark.py  command.py
biopilot/executor/: __init__.py  executor.py
biopilot/intent/: schema.py
biopilot/planner/: catalog.py
biopilot/provenance/: __init__.py
data/: make_test_data.py
examples/: manifest.json  manifest.md  pipeline.nf  truth.json  variants.vcf
tests/: test_intent.py  test_pipeline.py  test_validator.py
webapp/: README_DEPLOY.md  app.py  requirements.txt
webapp/biopilot/: __init__.py  cli.py  pipeline.py
webapp/biopilot/executor/: nextflow_gen.py
webapp/biopilot/intent/: __init__.py  parser.py
webapp/biopilot/planner/: __init__.py  planner.py
webapp/biopilot/provenance/: recorder.py
webapp/biopilot/validator/: __init__.py  schemas.py  validator.py
webapp/templates/: index.html
website/: index.html
